# pluma

./: CMakeLists.txt  README.md  pluma-writer.desktop  pluma-writer.xml  pluma.desktop  pluma.xml  test_click.patch  test_icon  test_icon.cpp  test_scroll.cpp  test_scroll.sh  update_locales.py  update_locales_para.py
assets/: color-scheme.json
include/: MainToolbar.hpp  PlumaColorSchemePreferences.hpp  PlumaGeneralSection.hpp  PlumaView.hpp  PlumaWindow.hpp
include/Ribbon/: HomeSection.hpp  ImageFormatSection.hpp  InsertSection.hpp  MultiToggleGroupButton.hpp  PageLayoutSection.hpp  TableLayoutSection.hpp
include/Widgets/: MarginButton.hpp  OptionButton.hpp  PlumaOptionItem.hpp  PlumaToolbarButton.hpp  SizeButton.hpp
include/pluma/Widgets/: FontPreview.hpp  ParagraphPreview.hpp  TableBordersPreview.hpp
include/pluma/dialogs/: FontDialog.hpp  ImageDialog.hpp  ParagraphDialog.hpp  TableDialog.hpp
include/utils/: FontUtils.hpp  TextParagraphUtils.hpp
locales/: en.json  es.json
src/: MainToolbar.cpp  PlumaView.cpp  PlumaWindow.cpp  main.cpp
src/Ribbon/: HomeSection.cpp  ImageFormatSection.cpp  InsertSection.cpp  MultiToggleGroupButton.cpp  PageLayoutSection.cpp  TableLayoutSection.cpp
src/Widgets/: FontPreview.cpp  MarginButton.cpp  OptionButton.cpp  ParagraphPreview.cpp  PlumaOptionItem.cpp  PlumaToolbarButton.cpp  SizeButton.cpp  TableBordersPreview.cpp
src/dialogs/: FontDialog.cpp  ImageDialog.cpp  ParagraphDialog.cpp  TableDialog.cpp
src/utils/: FontUtils.cpp
src/widgets/: FontPreview.cpp
tests/: test_list_paragraph.cpp
